Dashboard -> Student Name

--- a/src/app/components/student-report/student-report.component.html
+++ b/src/app/components/student-report/student-report.component.html
@@ -4,7 +4,7 @@
         <div class="container page__container d-flex flex-column flex-md-row align-items-center text-center text-sm-left">
             <div class="flex d-flex flex-column flex-sm-row align-items-center mb-24pt mb-md-0">
                 <div class="mb-24pt mb-sm-0 mr-sm-24pt">
-                    <h2 class="mb-0">Dashboard</h2>
+                    <h2 *ngIf="student | async as student" class="mb-0">{{student.displayName}}</h2>
                     <ol class="breadcrumb p-0 m-0">
                         <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
                         <li class="breadcrumb-item"><a routerLink="/profesor">Dashboard</a></li>
@@ -23,11 +23,6 @@
     <!-- Page Content -->
     <div class="container page__container">
         <div class="page-section" *ngIf="student | async as student">
-            <div class="page-separator">
-                <div class="page-separator__text">{{student.displayName}}</div>
-            </div>
-
-
             <div class="page-section" *ngFor="let lesson of student.lessons; index as i">
                 <div class="page-separator">
                     <div class="page-separator__text">{{ (lesson.id |lessonObject|async) }}</div>
